[package]
name = "mintas"
version = "1.0.0"
edition = "2021"
description = "Mintas: A modern, high-performance programming language with JetX JIT compiler"
license = "Apache-2.0"
keywords = ["language", "programming-language", "compiler", "jit", "interpreter"]
categories = ["compilers", "development-tools"]
authors = ["NotBeastR"]
exclude = ["target/", ".git/", "docs/", "*.md", "!README.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], optional = true }
url = { version = "2.4", optional = true }
# JIT Compilation support (simplified for Windows compatibility)
wasmtime = { version = "15.0", optional = true, default-features = false, features = ["cranelift"] }
wat = { version = "1.0", optional = true }
# Cranelift for raw machine code compilation
cranelift = { version = "0.102", optional = true }
cranelift-jit = { version = "0.102", optional = true }
cranelift-module = { version = "0.102", optional = true }
cranelift-native = { version = "0.102", optional = true }
# Database support
rusqlite = { version = "0.29", features = ["bundled"], optional = true }
redis = { version = "0.24", optional = true }
postgres = { version = "0.19", optional = true }
# Web framework (Axum backend for Dew)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
hyper = { version = "1.0", optional = true }
# Networking libraries
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1-native-tls"], optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
suppaftp = { version = "5.3", optional = true }
ssh2 = { version = "0.9", optional = true }
# Utility
lazy_static = { version = "1.4", optional = true }
regex-lite = { version = "0.1", optional = true }
# Canvas 2D Game Framework
minifb = { version = "0.25", optional = true, default-features = false, features = ["x11"] }
image = { version = "0.24", optional = true }
rodio = { version = "0.19", optional = true }
rusttype = { version = "0.9", optional = true }

# Magical Features
uuid = { version = "1.4", features = ["v4", "fast-rng"], optional = true }
csv = { version = "1.3", optional = true }
bcrypt = { version = "0.15", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }
base64 = { version = "0.21", optional = true }
aes = "0.8"
sha1 = "0.10"

cbc = "0.1"
rand = "0.8"
libloading = "0.8"

# Build system - compile to native executables
cc = "1.0"

[features]
default = ["datetime", "json", "logging", "cranelift-backend", "web", "canvas", "networking", "database", "magic"]
full = ["datetime", "json", "networking", "ai", "database", "jit", "cranelift-backend", "web", "logging", "net-tools", "canvas", "magic"]
datetime = ["chrono"]
json = ["serde_json", "serde"]
networking = ["reqwest", "tungstenite", "url", "serde"]
ai = ["reqwest", "serde_json", "serde"]
database = ["rusqlite", "redis", "postgres"]
jit = ["wasmtime", "wat"]
cranelift-backend = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
web = ["axum", "tokio", "tower", "tower-http", "hyper", "serde", "serde_json", "lazy_static"]
logging = ["lazy_static"]
canvas = ["minifb", "image", "rodio", "rusttype"]
# Networking tools
net-tools = ["smtp", "dns", "ftp", "ssh"]
smtp = ["lettre", "tokio"]
dns = ["trust-dns-resolver", "tokio"]
ftp = ["suppaftp"]
ssh = ["ssh2"]
magic = ["uuid", "csv", "bcrypt", "sha2", "sha1", "hmac", "hex", "base64"]

[[bin]]
name = "mintas"
path = "src/main.rs"